welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:4: error: type mismatch;
 found   : Unit
 required: Boolean
while(flag=0){avance
          ^RunHalf:6: error: value update is not a member of java.awt.Color
if (getCouleurSol()=color.orange){co=co+1}
    ^RunHalf:7: error: ambiguous reference to overloaded definition,
both method * in class Int of type (x: Char)Int
and  method * in class Int of type (x: Short)Int
match expected type ?
if(2 * Biscuit = co + 1){flag=1}}
     ^